[project]
name = "wizsprinter"
version = "0.5.5"
description = "A semi-official WizWalker extension"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
readme = "README.rst"
dependencies = [
    "lark>=1.1.9",
    "wizwalker",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wizwalker"]
